<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".scans.add.AddScanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:gravity="top"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:contentDescription="@string/add_label"
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginEnd="@dimen/edit_text_margins"
            android:layout_marginStart="@dimen/edit_text_margins"/>

        <TextView
            android:layout_marginEnd="@dimen/edit_text_margins"
            android:layout_marginStart="@dimen/edit_text_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_scanitem_toolbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewAddScan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:overScrollMode="ifContentScrolls">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_style"
                android:text="@string/add_scan_button_text"
                android:textColor="@color/colorPrimary"
                app:layout_anchorGravity="bottom|center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanItemRV"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/caputredIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/scanTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/scan_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caputredIV" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/scanItemRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/rv_all_margins"
                android:layout_marginEnd="@dimen/rv_all_margins"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanTitle"
                app:layout_constraintWidth_default="spread">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>