<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".scans.add.AddScanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:gravity="top"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
            android:contentDescription="@string/add_label"
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginEnd="@dimen/edit_text_margins"
            android:layout_marginStart="@dimen/edit_text_margins"/>


        <TextView
            android:layout_marginEnd="@dimen/edit_text_margins"
            android:layout_marginStart="@dimen/edit_text_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_scanitem_toolbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:overScrollMode="ifContentScrolls">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/editScanImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/image_view_margins"
                android:layout_marginStart="@dimen/image_view_margins"
                android:layout_marginTop="@dimen/image_view_margins"
                android:contentDescription="@string/image_description"
                android:maxHeight="@dimen/image_max_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="@dimen/image_max_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/label_image" />

            <Button
                android:id="@+id/editBT"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_style"
                android:text="@string/edit_scan_button_text"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editScanRecyclerView" />

            <EditText
                android:id="@+id/editTitleEText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editScanImageView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/editScanRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/rv_all_margins"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/edit_text_margins"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTitleEText"
                app:layout_constraintWidth_default="spread" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>