<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".labels.edit.EditLabelActivity"
    tools:ignore="ExtraText"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:contentDescription="@string/add_label"
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginEnd="@dimen/edit_text_margins"
            android:layout_marginStart="@dimen/edit_text_margins"/>

    <TextView
        android:layout_marginEnd="@dimen/edit_text_margins"
        android:layout_marginStart="@dimen/edit_text_margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_label_toolbar_title"
        android:textColor="@color/white"
        android:textSize="@dimen/toolbar_text_size" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/itemNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edit_text_margins"
                android:layout_marginStart="@dimen/edit_text_margins"
                android:layout_marginTop="@dimen/edit_text_margins"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toEndOf="@+id/textViewItemName"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <Button
                android:background="@drawable/button_style"
                android:textColor="@color/colorPrimary"
                android:id="@+id/updateLableBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_all_margins"
                android:layout_marginLeft="@dimen/button_all_margins"
                android:layout_marginRight="@dimen/button_all_margins"
                android:layout_marginTop="@dimen/button_all_margins"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addNewEditLableButton" />

            <Button
                android:id="@+id/addNewEditLableButton"
                android:background="@drawable/button_style"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_all_margins"
                android:layout_marginRight="@dimen/button_all_margins"
                android:layout_marginTop="@dimen/button_all_margins"
                android:text="@string/add_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editLabelRecyclerView" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/editLabelRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="@dimen/rv_all_margins"
                android:layout_marginStart="@dimen/rv_all_margins"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemNameEditText">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewItemName"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/edit_text_margins"
                android:layout_marginTop="@dimen/edit_text_margins"
                android:text="@string/nameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>